--- a/dev/frontend/frontend-service.yaml
+++ b/dev/frontend/frontend-service.yaml
@@ -1,10 +1,13 @@
+# Frontend Service
 apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
+  namespace: news-voyager
 spec:
   selector:
     app: frontend
   ports:
-    - port: 8082
-      targetPort: 8082
+    - port: 80
+      targetPort: 5173
+  type: ClusterIP
