--- a/dev/backend/backend-rollout.yaml
+++ b/dev/backend/backend-rollout.yaml
@@ -39,11 +39,33 @@ spec:
           ports:
             - containerPort: 3001
           env:
-            - name: MONGODB_URI
-              valueFrom:
-                secretKeyRef:
-                  name: mongodb-credentials
-                  key: uri
+          - name: MONGO_HOST
+            valueFrom:
+              configMapKeyRef:
+                name: backend-config
+                key: MONGO_HOST
+          - name: MONGO_PORT
+            valueFrom:
+              configMapKeyRef:
+                name: backend-config
+                key: MONGO_PORT
+          - name: MONGO_DB
+            valueFrom:
+              configMapKeyRef:
+                name: backend-config
+                key: MONGO_DB
+          - name: MONGO_USER
+            valueFrom:
+              secretKeyRef:
+                name: backend-secrets
+                key: MONGO_USER
+          - name: MONGO_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: backend-secrets
+                key: MONGO_PASSWORD
+          - name: MONGO_URI
+            value: "mongodb://$(MONGO_USER):$(MONGO_PASSWORD)@$(MONGO_HOST):$(MONGO_PORT)/$(MONGO_DB)?authSource=admin"
           readinessProbe:
             httpGet:
               path: /health
