--- a/dev/db/mongo-configs.yaml
+++ b/dev/db/mongo-configs.yaml
@@ -63,22 +63,9 @@ spec:
                 secretKeyRef:
                   name: backend-secrets
                   key: MONGO_PASSWORD
-          resources:
-            requests:
-              memory: "256Mi"
-              cpu: "100m"
-            limits:
-              memory: "512Mi"
-              cpu: "300m"
-  volumeClaimTemplates:
-    - metadata:
-        name: mongo-storage
-      spec:
-        accessModes: ["ReadWriteOnce"]
-        storageClassName: mongodb-sc
-        resources:
-          requests:
-            storage: 3Gi
+      volumes:
+        - name: mongo-storage
+          emptyDir: {}
 --- 
 apiVersion: v1
 kind: Service
