--- a/dev/frontend/frontend-rollout-loadbalancer.yaml
+++ b/dev/frontend/frontend-rollout-loadbalancer.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend-service
+  name: frontend-rollout-service
   namespace: news-voyager
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-type: nlb
