--- a/ingress/ingress.yaml
+++ b/ingress/ingress.yaml
@@ -16,6 +16,7 @@ metadata:
     alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
     alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
     alb.ingress.kubernetes.io/success-codes: "200-399"
+    alb.ingress.kubernetes.io/rewrite-target: "/"
 spec:
   ingressClassName: alb
   rules:
