--- a/dev/backend/backend-rollout.yaml
+++ b/dev/backend/backend-rollout.yaml
@@ -68,7 +68,7 @@ spec:
               value: "mongodb://$(MONGO_USER):$(MONGO_PASSWORD)@$(MONGO_HOST):$(MONGO_PORT)/$(MONGO_DB)?authSource=admin"
           readinessProbe:
             httpGet:
-              path: /health
+              path: /api/health
               port: 3001
             initialDelaySeconds: 10
             periodSeconds: 5
