--- a/dev/microservices/business/microservices-business-rollout.yaml
+++ b/dev/microservices/business/microservices-business-rollout.yaml
@@ -43,7 +43,7 @@ spec:
               value: "http://backend-rollout-service:3001"
           readinessProbe:
             httpGet:
-              path: /health
+              path: /business/health
               port: 3010
             initialDelaySeconds: 10
             periodSeconds: 5
