--- a/dev/microservices/entertainment/microservices-entertainment-deployment.yaml
+++ b/dev/microservices/entertainment/microservices-entertainment-deployment.yaml
@@ -33,7 +33,7 @@ spec:
               value: "http://backend-service:3001"
           readinessProbe:
             httpGet:
-              path: /health
+              path: /entertainment/health
               port: 3011
             initialDelaySeconds: 10
             periodSeconds: 5
