--- a/dev/microservices/general/microservices-general-deployment.yaml
+++ b/dev/microservices/general/microservices-general-deployment.yaml
@@ -33,7 +33,7 @@ spec:
               value: "http://backend-service:3001"
           readinessProbe:
             httpGet:
-              path: /health
+              path: /general/health
               port: 3016
             initialDelaySeconds: 10
             periodSeconds: 5
