--- a/dev/microservices/health/microservices-health-deployment.yaml
+++ b/dev/microservices/health/microservices-health-deployment.yaml
@@ -33,7 +33,7 @@ spec:
               value: "http://backend-service:3001"
           readinessProbe:
             httpGet:
-              path: /health
+              path: /health/health
               port: 3012
             initialDelaySeconds: 10
             periodSeconds: 5
