--- a/dev/microservices/health/microservices-health-rollout.yaml
+++ b/dev/microservices/health/microservices-health-rollout.yaml
@@ -43,7 +43,7 @@ spec:
               value: "http://backend-rollout-service:3001"
           readinessProbe:
             httpGet:
-              path: /health
+              path: /health/health
               port: 3012
             initialDelaySeconds: 10
             periodSeconds: 5
