--- a/dev/microservices/science/microservices-science-deployment.yaml
+++ b/dev/microservices/science/microservices-science-deployment.yaml
@@ -33,7 +33,7 @@ spec:
               value: "http://backend-service:3001"
           readinessProbe:
             httpGet:
-              path: /health
+              path: /science/health
               port: 3013
             initialDelaySeconds: 10
             periodSeconds: 5
