--- a/dev/microservices/sports/microservices-sports-deployment.yaml
+++ b/dev/microservices/sports/microservices-sports-deployment.yaml
@@ -33,7 +33,7 @@ spec:
               value: "http://backend-service:3001"
           readinessProbe:
             httpGet:
-              path: /health
+              path: /sports/health
               port: 3014
             initialDelaySeconds: 10
             periodSeconds: 5
