--- a/dev/microservices/technology/microservices-technology-rollout.yaml
+++ b/dev/microservices/technology/microservices-technology-rollout.yaml
@@ -43,7 +43,7 @@ spec:
               value: "http://backend-rollout-service:3001"
           readinessProbe:
             httpGet:
-              path: /health
+              path: /technology/health
               port: 3015
             initialDelaySeconds: 10
             periodSeconds: 5
